--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Kshabazz\\Web\\SigmaRemix\\Tests\\": "tests"
+            "Kshabazz\\Web\\SigmaRemix\\Tests\\": "tests/SigmaRemix"
         }
     },
     "description": "A recode of HTML_Template_Sigma, which implements Integrated Templates API designed by Ulf Wendel.",
